changes ui + bg music

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <div class="terminal" id="terminal">
         <div class="screen">
             <div class="output">
-                <p>Termify V2 : Arsh's Portfolio</p>
-                <p>To begin, type "start".</p>
+                <p><b>Termify V2 : Arsh's Portfolio</b></p>
+                <p>To begin, type "start"</p>
+                <p>Want some music?, type "music play"</p>
             </div>
             <div class="input-line">
                 <span class="prompt">$</span>
